--- a/prod.html
+++ b/prod.html
@@ -87,7 +87,7 @@
 
 <div class="about" id="about">
 	<div class="container">
-		<h3 class="heading">About <span>Us</span></h3>
+		<h3 class="heading">Product <span></span></h3>
 		<div class="about_grids" style="margin-top: 50px;">
 			<div class="col-md-6 about_left">
 				<h4>Italian Marble</h4>
@@ -230,3 +230,127 @@
 		<p class="copyright">© 2022  Royal Granites. All Rights Reserved | Design by <a href="https://www.concentics.in/" target="_blank">Concentics Solution</a></p>
 	</div>
 </div>
+
+<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+<!-- //js -->
+
+<!-- banner-type-text -->
+<script src="js/typed.js" type="text/javascript"></script>
+<script>
+	$(function(){
+
+		$("#typed").typed({
+			// strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
+			stringsElement: $('#typed-strings'),
+			typeSpeed: 30,
+			backDelay: 500,
+			loop: false,
+			contentType: 'html', // or text
+			// defaults to false for infinite loop
+			loopCount: false,
+			callback: function(){ foo(); },
+			resetCallback: function() { newTyped(); }
+		});
+
+		$(".reset").click(function(){
+			$("#typed").typed('reset');
+		});
+
+	});
+
+	function newTyped(){ /* A new typed object */ }
+
+	function foo(){ console.log("Callback"); }
+</script>
+<!-- //banner-type-text -->
+
+<!-- flexSlider -->
+<script defer src="js/jquery.flexslider.js"></script>
+<script type="text/javascript">
+	$(window).load(function(){
+	  $('.flexslider').flexslider({
+		animation: "slide",
+		start: function(slider){
+		  $('body').removeClass('loading');
+		}
+	  });
+	});
+</script>
+<!-- //flexSlider -->
+
+<!-- swipe box js -->
+<script src="js/jquery.adipoli.min.js" type="text/javascript"></script>
+<script type="text/javascript"> 
+	$(function(){ 
+		$('.row2').adipoli({
+			'startEffect' : 'overlay',
+			'hoverEffect' : 'sliceDown'
+		}); 
+	});
+	
+</script>
+<script src="js/jquery.swipebox.min.js"></script> 
+<script type="text/javascript">
+		jQuery(function($) {
+			$(".swipebox").swipebox();
+		});
+</script>
+<!-- //swipe box js -->
+
+<!-- Numscroller -->
+<script type="text/javascript" src="js/numscroller-1.0.js"></script>
+<!-- //Numscroller -->
+	
+<!-- Responsive Slider script -->
+<script src="js/responsiveslides.min.js"></script>
+<script>
+	// You can also use "$(window).load(function() {"
+	$(function () {
+		$("#slider").responsiveSlides({
+			auto: true,
+			nav: true,
+			manualControls: '#slider3-pager',
+		});
+	});
+</script>
+<!-- //Responsive Slider script -->
+
+<script src="js/SmoothScroll.min.js"></script>
+<!-- start-smoth-scrolling -->
+<script type="text/javascript">
+	jQuery(document).ready(function($) {
+		$(".scroll").click(function(event){		
+			event.preventDefault();
+			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+		});
+	});
+</script>
+<!-- start-smoth-scrolling -->
+	<!-- here stars scrolling icon -->
+	<script type="text/javascript">
+		$(document).ready(function() {
+			/*
+				var defaults = {
+				containerID: 'toTop', // fading element id
+				containerHoverID: 'toTopHover', // fading element hover id
+				scrollSpeed: 1200,
+				easingType: 'linear' 
+				};
+			*/
+								
+			$().UItoTop({ easingType: 'easeOutQuart' });
+								
+			});
+	</script>
+<!-- move to top-js-files -->
+<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
+<!-- //move to top-js-files -->
+
+<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script><!-- bootstrap js file -->
+
+
+</body>
+
+<!-- Mirrored from demo.w3layouts.com/demos_new/template_demo/24-01-2018/interior_home-demo_Free/870063644/web/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 28 Sep 2022 11:43:29 GMT -->
+</html>
