--- a/prod.html
+++ b/prod.html
@@ -5,15 +5,12 @@
 <head>
 <title>Royal Granites</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />\
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-		function hideURLbar(){ window.scrollTo(0,1); } </script>
-		
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/font-awesome.css" rel="stylesheet"> 
 
-<link rel="stylesheet" href="css/swipebox.css"> <!-- gallery css -->
+<link rel="stylesheet" href="css/swipebox.css">
 
 <!-- testimonials css -->
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" property="" /><!-- flexslider css -->
@@ -87,7 +84,7 @@
 
 <div class="about" id="about">
 	<div class="container">
-		<h3 class="heading">Product <span></span></h3>
+		<h3 class="heading">Product</h3>
 		<div class="about_grids" style="margin-top: 50px;">
 			<div class="col-md-6 about_left">
 				<h4>Italian Marble</h4>
