--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />\
 
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-		function hideURLbar(){ window.scrollTo(0,1); } </script>
-		
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/font-awesome.css" rel="stylesheet"> 
 
@@ -132,7 +129,7 @@
 
 
 
-<div style="">
+<div >
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3892.513236958491!2d77.9529153!3d12.679889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3badd7712b7fbc7b%3A0xb00dad0e07bdd3b8!2sROYAL%20GRANITES!5e0!3m2!1sen!2sin!4v1664374742241!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
