--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <head>
 <title>Royal Granites</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />\
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/font-awesome.css" rel="stylesheet"> 
